Fixed text in dark mode
Fixed dark mode text

--- a/styles/accountpage.css
+++ b/styles/accountpage.css
@@ -24,7 +24,9 @@
         background-color: #444;
         color: #e0e0e0;
     }
-
+    body {
+        color: #e0e0e0;
+    }
     .profile-picture img {
         border-color: #444;
     }
