--- a/styles/book.css
+++ b/styles/book.css
@@ -36,6 +36,10 @@
         color: #e0e0e0;
     }
 
+    body {
+        color: #e0e0e0;
+    }
+
     .profile-picture img {
         border-color: #444;
     }
