--- a/styles/leftsidebar.css
+++ b/styles/leftsidebar.css
@@ -32,6 +32,10 @@ aside{
         color: #e0e0e0;
     }
 
+    body {
+        color: #e0e0e0;
+    }
+
     .profile-picture img {
         border-color: #444;
     }
